Replaced collector with toList()